# landmarker

./: .gitignore  CMakeLists.txt  README.md
data/label/: IMG_4098.JPG.txt  README.md
include/: labeler.hpp  python.hpp
src/: labeler.cpp  main.cpp  python.cpp
